--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
+beautifulsoup4==4.11.1
+dj-database-url==0.5.0
 Django==4.0.4
-django-bootstrap3==21.2
+django-appconf==1.0.5
+django-bootstrap-v5==1.0.11
+django-heroku==0.3.1
+django-imagekit==4.1.0
 gunicorn==20.1.0
+pilkit==2.0
 Pillow==9.1.1
 psycopg2==2.9.3
+python-decouple==3.6
+six==1.16.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
 whitenoise==6.1.0
